samples/_failures_safe/1761203871_679cc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1263dc16.c: In function ‘main’:
./samples/SAFE/__tmp_1263dc16.c:153:19: error: expected ‘)’ at end of input
  153 |     add_edge(&g, 1
      |             ~     ^
      |                   )
./samples/SAFE/__tmp_1263dc16.c:153:5: error: too few arguments to function ‘add_edge’
  153 |     add_edge(&g, 1
      |     ^~~~~~~~
./samples/SAFE/__tmp_1263dc16.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int u, int v, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_1263dc16.c:153:5: error: expected declaration or statement at end of input
  153 |     add_edge(&g, 1
      |     ^~~~~~~~
